[tool.poetry]
name = "common-code"
version = "0.1.0"
description = ""
authors = ["mildsalmon <mildsalmon@gmail.com>"]
readme = "README.md"
packages = [{include = "common_code"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
pylint = "^3.3.1"
black = {version = "^24.10.0", extras = ["d"]}
pre-commit = "^4.0.1"
jupyter = "^1.1.1"
web3 = "^7.6.0"
eth-abi = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
